Replace eth_getLogs with eth_getBlockReceipts for block logs
- eth_getBlockReceipts returns logs in block order, eliminating the need
  for a separate eth_getLogs call and subsequent sorting
- Add RpcHttpServiceFactory to explicitly request gzip compression on
  all
  HTTP RPC calls
- Update rate limit calculations and documentation to reflect 2 RPC
  calls
  per block instead of 3
- Update tests to use eth_getBlockReceipts method name in error handling